hanu-reference/openstack/heat/Deployment_heat-api.yaml
# Source: heat/templates/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heat-api
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: heat
    application: heat
    component: api
spec:
  replicas: 3
  selector:
    matchLabels:
      release_group: heat
      application: heat
      component: api
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: heat
        application: heat
        component: api
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "b814469ae6753dfd221f5a931a0989174069b9cb80cdf5deaf7edd27c8bc09d9"
        configmap-etc-hash: "de384a82a54c18ad5a055d7a5bebfb452444b9b576900bcf930421f0e593dcd4"
    spec:
      serviceAccountName: heat-api
      securityContext:
        runAsUser: 42418
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - heat
                  - key: application
                    operator: In
                    values:
                    - heat
                  - key: component
                    operator: In
                    values:
                    - api
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled
      terminationGracePeriodSeconds: 30
      containers:
        - name: heat-api
          image: "deploy001:5000/stein/ubuntu-source-heat-api:taco-0.1.0"
          imagePullPolicy: IfNotPresent
          
          
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          command:
            - /tmp/heat-api.sh
            - start
          lifecycle:
            preStop:
              exec:
                command:
                  - /tmp/heat-api.sh
                  - stop
          ports:
            - name: h-api
              containerPort: 8004
          readinessProbe:
            tcpSocket:
              port: 8004
          livenessProbe:
            tcpSocket:
              port: 8004
            initialDelaySeconds: 30
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: pod-etc-heat
              mountPath: /etc/heat
            - name: heat-bin
              mountPath: /tmp/heat-api.sh
              subPath: heat-api.sh
              readOnly: true
            - name: heat-etc
              mountPath: /etc/heat/heat.conf
              subPath: heat.conf
              readOnly: true
            
            - name: heat-etc
              mountPath: /etc/heat/logging.conf
              subPath: logging.conf
              readOnly: true
            
            - name: heat-etc
              mountPath: /etc/heat/api-paste.ini
              subPath: api-paste.ini
              readOnly: true
            - name: heat-etc
              mountPath: /etc/heat/policy.json
              subPath: policy.json
              readOnly: true
            - name: heat-etc
              mountPath: /etc/heat/api_audit_map.conf
              subPath: api_audit_map.conf
              readOnly: true

      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: pod-etc-heat
          emptyDir: {}
        - name: heat-bin
          configMap:
            name: heat-bin
            defaultMode: 0555
        - name: heat-etc
          secret:
            secretName: heat-etc
            defaultMode: 0444
