hanu-reference/openstack/heat/Pod_heat-test.yaml
# Source: heat/templates/pod-rally-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: heat-test
  labels:
    release_group: heat
    application: heat
    component: test
  annotations:
    "helm.sh/hook": test-success
    "openstackhelm.openstack.org/release_uuid": ""
spec:
  nodeSelector:
    openstack-control-plane: enabled
  restartPolicy: Never
  serviceAccountName: heat-test
  containers:
    - name: heat-test
      image: "deploy001:5000/stein/ubuntu-source-rally:taco-0.1.0"
      imagePullPolicy: IfNotPresent
      
      command:
        - /tmp/rally-test.sh
      volumeMounts:
        - name: pod-tmp
          mountPath: /tmp
        - name: heat-etc
          mountPath: /etc/rally/rally_tests.yaml
          subPath: rally_tests.yaml
          readOnly: true
        - name: heat-bin
          mountPath: /tmp/rally-test.sh
          subPath: rally-test.sh
          readOnly: true
        - name: rally-db
          mountPath: /var/lib/rally
        - name: heat-etc
          mountPath: /tmp/rally-jobs/default.yaml
          subPath: test_template_0
          readOnly: true
        - name: heat-etc
          mountPath: /tmp/rally-jobs/random_strings.yaml
          subPath: test_template_1
          readOnly: true
        - name: heat-etc
          mountPath: /tmp/rally-jobs/resource_group_with_constraint.yaml
          subPath: test_template_2
          readOnly: true
        - name: heat-etc
          mountPath: /tmp/rally-jobs/resource_group_with_outputs.yaml
          subPath: test_template_3
          readOnly: true
        - name: heat-etc
          mountPath: /tmp/rally-jobs/updated_random_strings_replace.yaml
          subPath: test_template_4
          readOnly: true

  volumes:
    - name: pod-tmp
      emptyDir: {}
    - name: heat-etc
      secret:
        secretName: heat-etc
        defaultMode: 0444
    - name: heat-bin
      configMap:
        name: heat-bin
        defaultMode: 0555
    - name: rally-db
      emptyDir: {}
